# NeuroForm

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: api_reference.md  architecture.md  neuroplasticity_science.md
neuroform/: main.py
neuroform/brain/: orchestrator.py
neuroform/bridge/: bridge.py  discord_adapter.py
neuroform/daemons/: agency.py
neuroform/llm/: ollama_client.py
neuroform/memory/: amygdala.py  dream_consolidation.py  graph.py  neuroplasticity.py  working_memory.py
neuroform/tools/: apple_script.py  filesystem.py  manager.py  terminal.py  web.py
tests/: test_amygdala.py  test_behavioral.py  test_bridge.py  test_dream_consolidation.py  test_graph.py  test_neuroplasticity.py  test_ollama.py  test_orchestrator.py  test_tools.py  test_working_memory.py
