[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroform"
version = "0.1.0"
description = "A layered hierarchical Neo4j memory system with neuroplasticity for local Ollama LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "MettaMazza"}
]
keywords = ["neo4j", "ollama", "memory", "neuroplasticity", "knowledge-graph", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "neo4j>=5.14.0",
    "ollama>=0.1.6",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
neuroform = "neuroform.main:main"

[project.urls]
Homepage = "https://github.com/MettaMazza/NeuroForm"
Repository = "https://github.com/MettaMazza/NeuroForm"
Issues = "https://github.com/MettaMazza/NeuroForm/issues"

[tool.setuptools.packages.find]
include = ["neuroform*"]
